patch:modified image/r.html file

--- a/images/r.html
+++ b/images/r.html
@@ -47,7 +47,7 @@
                 <a href="">Rael Ip 1</a>
             </div>
             <div class=" link link-ip2">
-                <h3>my first web</h3>
+                <h3>Mygit first web</h3>
                 <p></p>
                 <a href="">Rael ip2</a>
             </div>
