patch:modified images/r.html file

--- a/images/r.html
+++ b/images/r.html
@@ -35,7 +35,7 @@
             <h3>Projects</h3>
         </div>
         <div class="projects-content">
-            <h4>personal projects</h4>
+            <h4>Personal projects</h4>
             <p class="project-p"></p>
            <div class="projects-cont">
            </div>
@@ -47,9 +47,9 @@
                 <a href="">Rael Ip 1</a>
             </div>
             <div class=" link link-ip2">
-                <h3>Mygit first web</h3>
+                <h3>My git first web</h3>
                 <p></p>
-                <a href="">Rael ip2</a>
+                <a href="">Rael Ip2</a>
             </div>
             </div>
     </div>
