patch:modified image/r.html file

--- a/images/r.html
+++ b/images/r.html
@@ -56,8 +56,8 @@
     <div class="container-low">
         <div class="about" id="#about">
             <h3>About me</h3>
-            <p>I  have passion in software development and iam interested in technologies such as html,css,js</p>
-        </div>
+            <p>I  have passion in software development and iam interested in technologies such as html,css and js</p>
+        </div
         <div class="about" id="#about">
             <div class="experience">
                 <h3>Experience</h3>
