patch:modified image/r.html file

--- a/images/r.html
+++ b/images/r.html
@@ -47,7 +47,7 @@
                 <a href="">Rael Ip 1</a>
             </div>
             <div class=" link link-ip2">
-                <h3>My git first web</h3>
+                <h3>My first git web</h3>
                 <p></p>
                 <a href="">Rael Ip2</a>
             </div>
