patch:modified index html file

--- a/images/index.html
+++ b/images/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="navbar" id="navbar">
@@ -58,7 +58,7 @@
             <h3>About me</h3>
             <p>I  have passion in software development and iam interested in technologies such as html,css and js</p>
         </div
-        <div class="about" id="#about">
+         div class="about" id="#about">
             <div class="experience">
                 <h3>Experience</h3>
             </div>
@@ -66,6 +66,7 @@
                 <p>2020-2022 -Moringa school </p>
                 <p>2017-2021-St Peter's Busibi Girls High School</p>
             </div>
+         </div>
         </div>
         <div class="about" id="#about">
             <h3> Interests and Hobbies</h3>
