--- a/images/index.html
+++ b/images/index.html
@@ -27,7 +27,7 @@
            <h3>""</h3>
         </div>
         <div class="img">
-            <img src="./images/rael.jpg" alt="image">
+            <img src=" /images/rael.jpg" alt="image">
         </div>
     </div>
     <div class="projects">
