patch:modified index.html file

--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
          </div>
         </div>
         <div class="about" id="#about">
-            <h3> Interests and Hobbies</h3>
+            <h3> interests and hobbies</h3>
             <p> I have passion in software development,singing,dancing,swimming,reading</p>
         </div>
     </div>
     <footer>
-        <div class="contacts" id="#contacts">
-            <h3>Contacts</h3>
+        <div class="contact" id="#contact">
+            <h3>Contact</h3>
         </div>
-        <div class="contacts-list">
+        <div class="contact-list">
             <ul>
                 <li>p.o Box 44-03545 </li>
                 <li>Busia</li>
